@@ -63,6 +63,7 @@ Bug fixes
  * Language chosen in user preferences no longer persists on subsequent requests (Bojan Mihelac)
  * Prevent new block IDs from being assigned on repeated calls to ``StreamBlock.get_prep_value`` (Colin Klein)
  * Prevent broken images in notification emails when static files are hosted on a remote domain (Eduard Luca)
+ * Replace styleguide example avatar with default image to avoid issues when custom user model is used (Matt Westcott)
 
 
 Upgrade considerations
